--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "sqlite3": "^5.1.6",
+    "sqlite": "^5.1.1",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
