--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@angular/forms": "^21.0.2",
     "@types/cors": "^2.8.19",
     "better-sqlite3": "^12.5.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "sqlite": "^5.1.1"
   }
 }
